<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SpMotorActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/colorPrimaryDark">
                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        app:tint="@color/white"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/space_5"
                        />

                    <TextView
                        android:id="@+id/tv_title"
                        
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/lin_wallet"
                        android:layout_toRightOf="@+id/iv_back"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/space_16"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lin_wallet"
                        android:layout_marginRight="@dimen/space_20"
                        android:layout_marginLeft="@dimen/space_20"
                        android:gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">
                        <ImageView
                            android:layout_width="@dimen/space_30"
                            android:layout_height="@dimen/space_30"
                            android:src="@drawable/icons8_wallet"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_toLeftOf="@+id/lin_wallet"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_wallet"
                            android:paddingLeft="@dimen/space_5"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            
                            android:text="0"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </RelativeLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_bakcground">

                    <LinearLayout
                        android:padding="@dimen/space_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:background="@drawable/bg_rect_edittext"

                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="75dp"                                android:layout_margin="@dimen/space_1"
                                android:weightSum="2"
                                android:orientation="vertical">

                                <TextView
                                    android:gravity="center"
                                    style="@style/bidText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Date"
                                    />

                                <TextView
                                    android:textAlignment="center"
                                    android:id="@+id/tv_date"
                                    android:padding="0dp"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/bidText"
                                    android:text=""
                                    />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_margin="@dimen/space_1"
                                android:background="@drawable/bg_rect_edittext"
                                android:layout_weight="1"
                                android:id="@+id/rel_type"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:weightSum="2"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_margin="@dimen/space_1"
                                    android:padding="@dimen/space_2"
                                    style="@style/bidText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Choose Type"

                                    />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_weight="1.3"
                                    android:weightSum="2">

                                    <RadioGroup
                                        android:id="@+id/radiogroup"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="2"
                                        android:orientation="horizontal">

                                        <RadioButton
                                            style="@style/MyRadioButton"
                                            android:id="@+id/rb_open"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="Open"
                                            />

                                        <RadioButton
                                            style="@style/MyRadioButton"
                                            android:id="@+id/rb_close"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="Close" />
                                    </RadioGroup>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lin_motor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:weightSum="2">
                            <TextView
                                android:id="@+id/tv_dp"
                                
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:paddingHorizontal="@dimen/space_8"
                                android:text="Motor"
                                style="@style/bidText" />

                                    <AutoCompleteTextView
                                        android:id="@+id/et_dp"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:inputType="number"
                                        android:layout_weight="1.3"
                                        style="@style/bid_autoText"
                                        android:hint="@string/enter_here"
                                        android:background="@drawable/bg_rect_edittext"
                                        android:textCursorDrawable="@null"
                                        />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:weightSum="2">
                            <TextView
                                
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:paddingHorizontal="@dimen/space_8"
                                android:text="Amount"
                                style="@style/bidText" />
                            <AutoCompleteTextView
                                    android:id="@+id/et_points"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1.3"
                                    android:background="@drawable/bg_rect_edittext"
                                    
                                    android:inputType="number"
                                    android:hint="@string/enter_here"
                                    style="@style/bid_autoText"
                                    
                                    android:textCursorDrawable="@null"
                                    />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="10dp"
                            android:weightSum="2">

                            <Button
                                android:id="@+id/btn_add"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/button_hieght_45dp"
                                android:layout_gravity="end"
                                android:layout_weight="2"
                                android:layout_marginStart="@dimen/space_5"
                                android:layout_marginTop="@dimen/space_10"
                                android:layout_marginEnd="@dimen/space_5"
                                android:layout_marginBottom="@dimen/space_10"
                                android:text="@string/Proceed" />

                            <Button
                                android:id="@+id/btn_reset"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="45dp"
                                android:layout_gravity="end"
                                android:layout_marginStart="@dimen/space_5"
                                android:layout_marginTop="@dimen/space_10"
                                android:layout_marginEnd="@dimen/space_5"
                                android:layout_marginBottom="@dimen/space_10"
                                android:text="Reset"
                                android:visibility="gone"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                app:iconGravity="textStart" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            android:layout_marginHorizontal="@dimen/space_10"
                            />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="@dimen/space_10"
                        android:layout_marginTop="@dimen/space_10"
                        android:layout_marginEnd="@dimen/space_10"
                        android:layout_marginBottom="@dimen/space_10"
                        android:paddingHorizontal="60dp"
                        android:text="@string/bet_submit"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        app:cornerRadius="@dimen/space_20" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </RelativeLayout>

